# skeleton-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  resources.rc
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  suggestion.md  vulnerability_report.md
src/: game.cpp  gm_game.cpp  gm_game.hpp  host.cpp  launcher.c  launcher.cpp  main.cpp
src/audio/: gm_audio.cpp  gm_sound_instance.hpp
src/client/: gm_client.cpp  gm_client.hpp
src/client/audio/: gm_audio.cpp  gm_audio.hpp  gm_sound.cpp  gm_sound.hpp  gm_sound_instance.cpp  gm_sound_instance.hpp
src/client/components/: gm_client_components.cpp  gm_client_components.hpp  gm_render_component.cpp  gm_render_component.hpp
src/client/gamestates/: gm_client_state.cpp  gm_client_state.hpp  gm_game_state.hpp  gm_host_state.cpp  gm_host_state.hpp  gm_menu_state.cpp  gm_menu_state.hpp
src/client/graphics/game/: gm_camera.cpp  gm_camera.hpp  gm_model.cpp  gm_model.hpp
src/client/graphics/systems/: gm_render_system.cpp  gm_render_system.hpp
src/client/graphics/vulkan/: gm_descriptors.cpp  gm_descriptors.hpp  gm_graphics_device.cpp  gm_graphics_device.hpp  gm_graphics_instance.cpp  gm_graphics_instance.hpp  gm_model_buffer.cpp  gm_model_buffer.hpp  gm_pipeline.cpp  gm_pipeline.hpp  gm_renderer.cpp  gm_renderer.hpp  gm_swap_chain.cpp  gm_swap_chain.hpp
src/client/graphics/window/: gm_window.cpp  gm_window.hpp
src/client/input/: gm_input.hpp
src/common/: gm_core.cpp  gm_core.hpp
src/common/data/: gm_bkv.cpp  gm_bkv.hpp  gm_buffer_memory.hpp  gm_endianness.cpp  gm_endianness.hpp  gm_file.cpp  gm_file.hpp  gm_logger.cpp  gm_serializer.cpp  gm_serializer.hpp  gm_string.cpp  gm_string.hpp  gm_type_aliaser.hpp  gm_utf8.hpp
src/common/data/bkv/: gm_bkv.cpp  gm_bkv.hpp  gm_bkv_buffer.cpp  gm_bkv_buffer.hpp  gm_bkv_builder.cpp  gm_bkv_builder.hpp  gm_bkv_parser.cpp  gm_bkv_parser.hpp  gm_bkv_state.hpp  gm_bkv_state_string.cpp  gm_bkv_state_string.hpp  gm_bkv_string_state.hpp  gm_sbkv.cpp  gm_sbkv.hpp
src/common/data/bkv/states/: gm_bkv_parser_state.hpp  gm_bkv_parser_state_array.cpp  gm_bkv_parser_state_array.hpp  gm_bkv_parser_state_complete.cpp  gm_bkv_parser_state_complete.hpp  gm_bkv_parser_state_find_tag.cpp  gm_bkv_parser_state_find_tag.hpp  gm_bkv_parser_state_key.cpp  gm_bkv_parser_state_key.hpp  gm_bkv_parser_state_number.cpp  gm_bkv_parser_state_number.hpp  gm_bkv_parser_state_string.cpp  gm_bkv_parser_state_string.hpp  gm_bkv_state.cpp  gm_bkv_state.hpp  gm_bkv_state_array.cpp  gm_bkv_state_array.hpp  gm_bkv_state_complete.cpp  gm_bkv_state_complete.hpp  gm_bkv_state_find_tag.cpp  gm_bkv_state_find_tag.hpp  gm_bkv_state_key.cpp  gm_bkv_state_key.hpp  gm_bkv_state_name.cpp  gm_bkv_state_name.hpp  gm_bkv_state_number.cpp  gm_bkv_state_number.hpp  gm_bkv_state_string.cpp  gm_bkv_state_string.hpp  gm_bkv_states.cpp  gm_bkv_states.hpp
src/common/data/file/: gm_compression.cpp  gm_compression.hpp  gm_file.cpp  gm_file.hpp  gm_logger.cpp  gm_logger.hpp
src/common/data/string/: gm_format_string.cpp  gm_format_string.hpp  gm_string.cpp  gm_string.hpp  gm_string_buffer.cpp  gm_string_buffer.hpp  gm_utf8.cpp  gm_utf8.hpp
src/common/headers/: bkv.hpp  file.hpp  float.hpp  string.hpp
src/common/logger/: gm_logger.cpp
src/common/system/: gm_system.cpp  gm_system.hpp  gm_threads.cpp  gm_threads.hpp
src/core/: gm_core.cpp  gm_core.hpp
src/core/file/: gm_endianness.hpp  gm_file.cpp  gm_file.hpp  gm_json.cpp  gm_json.hpp  gm_serializer.cpp  gm_serializer.hpp
src/core/logger/: gm_logger.cpp
src/core/system/: gm_threads.hpp
src/game/: gm_client.cpp  gm_client.hpp  gm_command.hpp  gm_game_object.hpp  gm_server.cpp  gm_server.hpp
src/game/commands/: gm_command.hpp
src/game/components/: gm_ai_component.cpp  gm_ai_component.hpp  gm_physics_component.cpp  gm_physics_component.hpp  gm_render_component.cpp  gm_render_component.hpp  gm_server_components.hpp
src/game/config/: config.hpp
src/game/entities/: gm_entity.hpp
src/game/gui/: gm_menu.hpp
src/game/gui/components/: gm_button.hpp
src/game/objects/: gm_game_object.cpp  gm_game_object.hpp  gm_point_light.hpp  gm_prop.hpp
src/game/sides/: gm_client.cpp  gm_client.hpp
src/game/states/: gm_client_state.cpp  gm_client_state.hpp  gm_game_state.hpp  gm_game_states.cpp  gm_game_states.hpp  gm_host_state.cpp  gm_host_state.hpp  gm_menu_state.cpp  gm_menu_state.hpp
src/game/world/: gm_client_world.hpp  gm_world.cpp  gm_world.hpp
src/graphics/: gm_camera.cpp  gm_camera.hpp  gm_descriptors.cpp  gm_descriptors.hpp  gm_graphics_device.cpp  gm_graphics_device.hpp  gm_graphics_instance.cpp  gm_graphics_instance.hpp  gm_model.cpp  gm_model.hpp  gm_model_buffer.cpp  gm_model_buffer.hpp  gm_pipeline.cpp  gm_pipeline.hpp  gm_renderer.cpp  gm_renderer.hpp  gm_swap_chain.cpp  gm_swap_chain.hpp  gm_window.cpp  gm_window.hpp
src/graphics/game/: gm_camera.cpp  gm_camera.hpp  gm_model.cpp  gm_model.hpp
src/graphics/vulkan/: gm_descriptors.cpp  gm_descriptors.hpp  gm_graphics_device.cpp  gm_graphics_device.hpp  gm_graphics_instance.cpp  gm_graphics_instance.hpp  gm_model_buffer.cpp  gm_model_buffer.hpp  gm_pipeline.cpp  gm_pipeline.hpp  gm_renderer.cpp  gm_renderer.hpp  gm_swap_chain.cpp  gm_swap_chain.hpp
src/graphics/window/: gm_window.cpp  gm_window.hpp
src/input/: gm_input.cpp  gm_input.hpp
src/server/: gm_server.cpp  gm_server.hpp  gm_server_instance.cpp  gm_server_instance.hpp
src/server/components/: gm_ai_component.cpp  gm_ai_component.hpp  gm_physics_component.cpp  gm_physics_component.hpp  gm_server_components.cpp  gm_server_components.hpp  gm_transform_component.cpp  gm_transform_component.hpp
src/server/entities/: gm_entity.hpp
src/server/world/: gm_world.cpp  gm_world.hpp
src/sound/: gm_sound.cpp  gm_sound.hpp
src/util/: gm_cmd_args.cpp  gm_cmd_args.hpp  gm_core.cpp  gm_core.hpp  gm_file.cpp  gm_file.hpp  gm_logger.cpp  gm_logger.hpp
src/util/file/: gm_file.cpp
src/util/system/: gm_system.cpp  gm_system.hpp  gm_threads.cpp
